[package]
name = "authority-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio= { version = "1.25.0", features = ["rt-multi-thread", "signal", "macros"] }
parity-scale-codec = "3.4.0"
subxt = "0.27.1"
clap = { version = "4.1.6", features = ["derive", "env"] }
mysql_async = "0.31.3"
sp-core = "17.0.0"
futures-util = "0.3.26"
dogstatsd = "0.7.1"